Fix z-index for action plan selector

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -762,7 +762,8 @@ tbody tr:hover {
 .modal.show {
     display: flex;
 }
-#controlSelectorModal {
+#controlSelectorModal,
+#actionPlanSelectorModal {
     z-index: 2100;
 }
 
